# testir

./: CMakeLists.txt  CTestConfig.cmake  serialisation.xlsx
.github/workflows/: cmake.yml  smakeWin.yml
rank/: CMakeLists.txt  rank.cpp  rank.h
rank/tests/: CMakeLists.txt  itemtest.cpp  ranktest.cpp  ranktestrev.cpp  sumtest.cpp  sumtestrev.cpp
sample/: sample.cpp
